@@ -1,5 +1,7 @@
 2002-08-26  Alan Modra  <amodra@bigpond.net.au>
 
+	* gas/ieee-fp/x930509a.exp: Run the test but xfail.  Add c80 to xfails.
+
 	* gas/vax/quad.exp: Use quad_elf.s for ELF targets.
 	* gas/vax/quad.s: Align
 	* gas/vax/quad_elf.s: New version of quad.s with %reg.
